"use strict";

//local imports

const UserBody = require("../../../../../../scripts/client/components/main/user/list/user-body");

const { testWrapper } = require("../../../../test-helpers");

//global imports

const { initTestSnapshot } = require("redux/tests/client-tests");
const { reactTests } = require("redux/tests/react-tests");

//utilities

const { testShallow } = testWrapper(UserBody);

const testSnapshot = initTestSnapshot(testShallow);

//setup

beforeAll(reactTests.setup);
beforeEach(reactTests.inject(UserBody));

//user body

test("UserBody should match snapshot", () => testSnapshot());
