// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBody should match snapshot (default) 1`] = `
<MetaListBody
  local={
    Object {
      "handleScroll": [MockFunction],
      "header": <div
        className="c-list-body__header"
      >
        <h1>
          Users
        </h1>
      </div>,
    }
  }
/>
`;

exports[`UserBody should match snapshot (list) 1`] = `
<MetaListBody
  local={
    Object {
      "handleScroll": [MockFunction],
      "header": <div
        className="c-list-body__header"
      >
        <h1>
          Users
        </h1>
      </div>,
    }
  }
>
  <UserItem
    key="0-000"
    local={
      Object {
        "userData": Object {
          "data": Object {
            "address": "",
            "app": "nightlife-app",
            "avatar": "",
            "blocks": Array [],
            "distance": 0,
            "favorites": Array [],
            "friends": Array [],
            "location": null,
          },
          "id": "",
          "name": "",
        },
      }
    }
  />
</MetaListBody>
`;
